--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - cycler=0.10.0
   - dscribe=0.4.0 # 0.3.5 available for linux
-  - matplotlib=3.2.0 # 3.2.1 available
+  - matplotlib>=3.2.2 # warnings appear for lower versions, don't change
   - mdanalysis>=1.0.0
   - mypy=0.770
   - numpy=1.19.1
