--- a/.github/workflows/unit-test-pr.yml
+++ b/.github/workflows/unit-test-pr.yml
@@ -1,9 +1,12 @@
 name: swarm-cg-tests
 
-on: pull_request
-
+on:
+  pull_request:
+    branches:
+      - master
+      - develop
 jobs:
-  build:
+  unittest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
