First implementation end2end (#29)
* First implementation end2end

* Edit github action test

* Run unittest before end2end

* Use a unique yml file for tests, execute itests only it unit tests pass

--- a/.github/workflows/swarmcg-tests.yml
+++ b/.github/workflows/swarmcg-tests.yml
@@ -1,9 +1,12 @@
 name: swarm-cg-tests
 
-on: pull_request
-
+on:
+  pull_request:
+    branches:
+      - master
+      - develop
 jobs:
-  build:
+  unittest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,3 +29,17 @@ jobs:
     - name: Test with pytest
       run: |
         pytest tests/
+
+  itests:
+    needs: unittest
+    runs-on: ubuntu-20.04
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Docker build
+      run: |
+        docker build -f ./itests/Dockerfile.test -t swarmcg .
+
+    - name: Run tests
+      run: |
+        docker run swarmcg
